# zzz-limail-deprecated

./: .travis.yml  AUTHORS  Cargo.toml  LICENSE  README.md  Rocket.toml  lichess-deploy.sh  limail.service
src/: mailgun.rs  main.rs  slack.rs
