[package]
name = "limail"
version = "0.1.0"
authors = ["Lakin Wecker <lakin@wecker.ca>"]
description = "A helper for dealing with mailgun for lichess"
repository = "https://github.com/lakinwecker/limail"
readme = "README.md"
license = "AGPL-3.0+"
edition = "2018"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.1.29"
hex = "0.3.1"
hmac = "0.7.1"
log = "0.4.0"
pretty_env_logger = "0.3"
reqwest = "0.9.22"
serde = "1.0.103"
serde_json = "1.0.44"
sha2 = "0.8.0"
tokio = { version = "0.2", features = ["full"] }
warp = "0.1.20"
